# PRNG

./: .gitignore  README.md  TODO.md  prng-pres.pptx
dieharder-info/: dieharder-install.sh
gpu/Code/: Makefile  check_GPU  check_GPU.cu  commands_compile_check_GPU.txt  config.mk  config_HPC.mk  config_HPC_1.mk
gpu/Code/lib/: cuda_info  (+9 more)
launchers/dieharder/: dieharder0-fixedseed.sh  dieharder0.sh  dieharder1.sh  dieharder2.sh  slurm-79257.out  slurm-79263.out  slurm-79264.out  slurm-79265.out
launchers/linear/: linear0.sh  linear1.sh  linear2.sh  slurm-79168.out  slurm-79169.out  slurm-79170.out
launchers/mode/: mode00.sh  mode01.sh  mode10.sh  mode11.sh  mode20.sh  mode21.sh  slurm-78818.out  slurm-78819.out  slurm-78820.out  slurm-78821.out  slurm-78822.out  slurm-78823.out
results/: benchmarking-data.xlsx  benchmarking_data.xlsx  dieharder_gpu.html  dieharder_gpu_single_stream.html  dieharder_seq_g0.txt  dieharder_seq_g1.txt  dieharder_seq_g2.txt  nist_mpi_m0.txt  nist_mpi_m0_fixedseed.txt  nist_mpi_m1.txt  nist_mpi_m2.txt  nist_seq_g0.txt  nist_seq_g1.txt  nist_seq_g2.txt  plots_src.r  plots_src_old.r  test_commands.txt
src/: CMakeLists.txt  Generator.hpp  MRG32k3a.c  Makefile  main.cpp  rng_mpi.cpp  rng_seq.cpp
src/dieharder-info/: .bash_private  dieharder-install.sh
src/launchers/: benchmark00.sh  benchmark01.sh  benchmark10.sh  benchmark11.sh  benchmark20.sh  benchmark21.sh  slurm-78715.out  slurm-78716.out  slurm-78718.out
src/launchers/mode/: mode01.sh  mode20.sh  mode21.sh
src/launchers/speed/: slurm-78714.out  slurm-78718.out  slurm-78719.out
(+128 files in other folders)
